# Questbot

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
questbot_bringup/: CMakeLists.txt  package.xml
questbot_description/: CMakeLists.txt  package.xml
questbot_description/config/: display.perspective  display.rviz  slam.rviz
questbot_description/description/: material.xacro  robot_model.xacro
questbot_description/launch/: display.launch.py  rsp.launch.py  visualize.launch.py
questbot_description/urdf/: body.urdf.xacro  gazebo.urdf.xacro  robot.urdf.xacro
questbot_gazebo/: CMakeLists.txt  package.xml
questbot_gazebo/config/: ros_gz_bridge.yaml
questbot_gazebo/launch/: gazebo.launch.py  gzsim.launch.py  sim_gz.launch.py  spawn_gz.launch.py
questbot_localization/: CMakeLists.txt  package.xml
questbot_localization/config/: ekf.yaml
questbot_localization/launch/: localization.launch.py
questbot_navigation/: CMakeLists.txt  package.xml
questbot_navigation/config/: mapper_params_online_async.yaml
questbot_simulation/: CMakeLists.txt  package.xml
questbot_simulation/launch/: gazebo.launch.py  gzsim.launch.py
questbot_simulation/world/: cones.world
robot_dd/: CMakeLists.txt  package.xml
robot_dd/config/: my_controllers.yaml  view_robot.rviz
robot_dd/description/: camera.xacro  depth_camera.xacro  gazebo_control.xacro  lidar.xacro  material.xacro  robot.urdf.xacro  robot.xacro  robot_core.xacro  (+2 more)
robot_description/: CMakeLists.txt  package.xml
robot_simulation/: CMakeLists.txt  package.xml
(+86 files in other folders)
